# ArUco_ROS-QR-code-detection

./: .cproject  .project  .pydevproject  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  manifest.xml~  rosdoc.yaml
include/camerasCalibration/: ArdroneBottom.yml  ArdroneFront.yml  camera.yml  camera_.yml  ueyeBig.yml  ueyeXS.yml  vrep.yml
launch/: ardrone_bottom.launch  ardrone_front.launch  aruco_ueye.launch  aruco_vrep.launch
msg/: marker_info.msg
msg_gen/cpp/include/aruco/: marker_info.h
msg_gen/lisp/: _package.lisp  _package_marker_info.lisp  aruco-msg.asd  marker_info.lisp
src/: main.cpp  main.cpp~  subscriber_aruco.cpp
src/aruco/: aruco_gl.cpp  aruco_gl.h  cameraparameters.cpp  cameraparameters.h  marker.cpp  marker.h
src/aruco/msg/: __init__.py  _marker_info.py
